--- a/src/style/Animals.css
+++ b/src/style/Animals.css
@@ -1,11 +1,23 @@
 .animals-container {
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
     max-width: 100vw;
+    padding: 1rem;
+    justify-content: space-evenly;
+    margin: 0.5rem;
   }
 
+  .animal-container {
+    background-color: #5C5470;
+    max-width: 20rem;
+    margin: 0.2rem;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+  }
+ 
   img {
-    height: 12rem;
-    width: 12rem;
+    max-width: 100%;
+    max-height: 20rem;
+    object-fit: contain;
   }
   
