--- a/src/style/index.css
+++ b/src/style/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: #F4EEE0;
-  background-color: #393646;
+  color: #FAF0E6;
+  background-color: #352F44;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -24,7 +24,7 @@ ul {
 
 a {
   font-weight: 500;
-  color: #F4EEE0;
+  color: #FAF0E6;
   text-decoration: inherit;
 }
 a:hover {
@@ -42,8 +42,8 @@ body {
 h1 {
   font-size: 3.5em;
   line-height: 1.1;
-  background-color: #4F4557;
-  position: absolute;
+  background-color: #5C5470;
+  position: relative;
   margin-top: 0;
   left: 0;
   top: 0;
