--- a/src/style/Animals.css
+++ b/src/style/Animals.css
@@ -14,6 +14,11 @@
     padding: 0.5rem;
     border-radius: 0.5rem;
   }
+
+  .long-description {
+    width: 48rem;
+    margin: auto;
+  }
  
   img {
     max-width: 100%;
