--- a/src/style/index.css
+++ b/src/style/index.css
@@ -16,21 +16,24 @@
 
 ul {
   font-size: 2em;
-  background-color: #5C5470;
+  background-color: #352F44;
   list-style-type: none;
   padding: 0;
   position: absolute;
+  margin-left: 0.5rem;
   top: 0.5rem;
   width: 8rem;
   transition: all 0.3s ease-in-out;  
-  border-radius: 0.2rem;
+  border: 0.15rem ridge #FAF0E6;
+  border-radius: 0.5rem;
   z-index: 2;
 }
 
 ul:hover {
   font-size: 2.5em;
+  top: 0;
   cursor: pointer;
-  border: 0.1rem solid #FAF0E6;
+  border: 0.25rem solid #FAF0E6;
 }
 
 a {
